--- a/Pine'sTool/DetailedFunctionalities/HTMLCase/使用CSS美化HTML5文档.html
+++ b/Pine'sTool/DetailedFunctionalities/HTMLCase/使用CSS美化HTML5文档.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="utf-8">
     <style type="text/css">
-        article{display:block}
-        article header p{font-size:13px;}
-        article header h1{font-size:16px;}
-        .p-date{font-size:11px;}
+        article {
+            display: block
+        }
+
+            article header p {
+                font-size: 13px;
+            }
+
+            article header h1 {
+                font-size: 16px;
+            }
+
+        .p-date {
+            font-size: 11px;
+        }
     </style>
 </head>
 
@@ -15,9 +26,11 @@
         <header>
             <h1><a href="#" target="new">竞争下半场：创业公司需警惕“C轮魔咒”</a></h1>
             <p class="p-date">日期：2016年12月28</p>
-            <p>一般来说，一家创业公司谋求C轮融资，在时间节点上往往意味着属于它的竞争来到了下半场。
-            下半场的竞争往往更加血腥。在消费互联网时代，服务与产品相对标准化，供应链较短，岂不是其大家都能快速上手。并且因为市场够大，都有发展空间，进水不犯河水。
-            然而随着时间的推移，市场红利消失，竞争者们不得不刺刀见红。智能手机行业里一度谋求C轮融资受阻的锤子科技就是典型案例。</p>
+            <p>
+                一般来说，一家创业公司谋求C轮融资，在时间节点上往往意味着属于它的竞争来到了下半场。
+                下半场的竞争往往更加血腥。在消费互联网时代，服务与产品相对标准化，供应链较短，岂不是其大家都能快速上手。并且因为市场够大，都有发展空间，进水不犯河水。
+                然而随着时间的推移，市场红利消失，竞争者们不得不刺刀见红。智能手机行业里一度谋求C轮融资受阻的锤子科技就是典型案例。
+            </p>
         </header>
     </article>
 </body>
