--- a/Pine'sTool/DetailedFunctionalities/HTMLCase/构建HTML5结构_设计主体结构_定义侧边栏_示例1.html
+++ b/Pine'sTool/DetailedFunctionalities/HTMLCase/构建HTML5结构_设计主体结构_定义侧边栏_示例1.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+    <meta charset="utf-8">
 </head>
 <body>
     <header>
@@ -9,8 +9,10 @@
     </header>
     <article>
         <h1>HTML5历史</h1>
-        <p>HTML5草案的前身名为Web Application 1.0，于2004年被 WHATWG 提出，于2007年被W3C接纳，并成立了新的 HTML 工作团队。HTML5 的第一份正式草案已于 2008 年 1 月 22 日公布。2014 年 10
-         月 28 日，W3C 的HTML 工作组正式发布了 HTML5 的官方推荐标准。</p>
+        <p>
+            HTML5草案的前身名为Web Application 1.0，于2004年被 WHATWG 提出，于2007年被W3C接纳，并成立了新的 HTML 工作团队。HTML5 的第一份正式草案已于 2008 年 1 月 22 日公布。2014 年 10
+            月 28 日，W3C 的HTML 工作组正式发布了 HTML5 的官方推荐标准。
+        </p>
         <aside>
             <h1>名词解释</h1>
             <dl>
