--- a/Pine'sTool/DetailedFunctionalities/HTMLCase/使用HTML5结构化元素-原始方法id.html
+++ b/Pine'sTool/DetailedFunctionalities/HTMLCase/使用HTML5结构化元素-原始方法id.html
@@ -4,25 +4,31 @@
     <meta charset="utf-8">
     <title></title>
     <style type="text/css">
-        #header,#siderLeft,#siderRight,#footer{
-            border:solid 1px #666;
-            padding:10px;
-            margin:6px;
+        #header, #siderLeft, #siderRight, #footer {
+            border: solid 1px #666;
+            padding: 10px;
+            margin: 6px;
         }
-        #header{width:500px;}
-        #siderLeft{
-            float:left;
-            width:60px;
-            height:100px;
+
+        #header {
+            width: 500px;
         }
-        #siderRight{
-            float:left;
-            width:406px;
-            height:100px;
+
+        #siderLeft {
+            float: left;
+            width: 60px;
+            height: 100px;
         }
-        #footer{
-            clear:both;
-            width:500px;
+
+        #siderRight {
+            float: left;
+            width: 406px;
+            height: 100px;
+        }
+
+        #footer {
+            clear: both;
+            width: 500px;
         }
     </style>
 </head>
